# android-unity-compare-service

./: .dockerignore  .env.cloud.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PROJECT_MAP.md  docker-compose.cloud.yml  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py  storage.py
app/admin/: __init__.py  routes.py
app/api/: routes.py
app/aps/: client.py
app/auth/: deps.py  feishu.py  routes.py  service.py
app/unity/: compare.py  dumper.py  report.py
app/worker/: cleanup.py  executor.py  loop.py
deploy/: CONSOLE_DEPLOY.md  Caddyfile  litestream.yml.tmpl
docs/: android_unity_compare_service_plan.md  git_commit_convention.md
lib/product/DllAnalyzer/linux/: DllAnalyzer
lib/product/DllAnalyzer/osx/: DllAnalyzer
tests/: test_service.py
